--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@json-rpc-tools/utils": "^1.7.6",
@@ -18,8 +19,8 @@
     "@walletconnect/qrcode-modal": "^1.8.0",
     "@walletconnect/types": "^1.8.0",
     "@walletconnect/web3-provider": "^1.8.0",
-    "algosdk": "^1.19.1",
     "antd": "^4.22.7",
+    "bitbadgesjs": "^0.0.1",
     "blockin": "^1.2.12",
     "blockin-algo-driver": "^1.0.2",
     "blockin-eth-driver": "^1.0.9",
@@ -27,9 +28,7 @@
     "dotenv": "^16.0.1",
     "eth-sig-util": "^3.0.1",
     "ethers": "^5.7.0",
-    "fortmatic": "^2.4.0",
     "isuri": "^2.0.3",
-    "moralis": "^1.11.0",
     "next": "^12.2.5",
     "papaparse": "^5.3.2",
     "react": "18.0.0",
