--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@cosmjs/crypto": "^0.28.13",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -20,14 +21,16 @@
     "@walletconnect/types": "^1.8.0",
     "@walletconnect/web3-provider": "^1.8.0",
     "antd": "^4.23.0",
+    "axios": "^0.27.2",
     "bitbadgesjs-address-converter": "^0.0.3",
     "bitbadgesjs-provider": "^0.0.3",
-    "bitbadgesjs-transactions": "^0.0.47",
+    "bitbadgesjs-transactions": "^0.0.49",
     "blockin": "^1.2.12",
     "blockin-algo-driver": "^1.0.2",
-    "blockin-eth-driver": "^1.0.9",
+    "blockin-eth-driver-minified": "^1.0.0",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.0.2",
+    "elliptic": "^6.5.4",
     "eth-sig-util": "^3.0.1",
     "ethers": "^5.7.0",
     "isuri": "^2.0.3",
@@ -40,10 +43,10 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "tweetnacl": "^1.0.3",
-    "web3": "^1.7.5",
     "web3modal": "^1.9.9"
   },
   "devDependencies": {
+    "@types/elliptic": "^6.4.14",
     "@types/node": "17.0.23",
     "@types/papaparse": "^5.3.5",
     "@types/react": "18.0.1",
