--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "axios": "^0.27.2",
     "bitbadgesjs-address-converter": "^0.0.3",
     "bitbadgesjs-provider": "^0.0.3",
-    "bitbadgesjs-transactions": "^0.0.49",
+    "bitbadgesjs-transactions": "^0.0.52",
     "blockin": "^1.2.12",
     "blockin-algo-driver": "^1.0.2",
     "blockin-eth-driver-minified": "^1.0.0",
@@ -33,6 +33,7 @@
     "elliptic": "^6.5.4",
     "eth-sig-util": "^3.0.1",
     "ethers": "^5.7.0",
+    "ipfs-http-client": "^58.0.1",
     "isuri": "^2.0.3",
     "next": "^12.2.5",
     "papaparse": "^5.3.2",
