--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "elliptic": "^6.5.4",
     "eth-sig-util": "^3.0.1",
     "ethers": "^5.7.0",
+    "file-saver": "^2.0.5",
     "ipfs-http-client": "^58.0.1",
     "isuri": "^2.0.3",
     "next": "^12.2.5",
@@ -46,6 +47,7 @@
   },
   "devDependencies": {
     "@types/elliptic": "^6.4.14",
+    "@types/file-saver": "^2.0.5",
     "@types/node": "17.0.23",
     "@types/papaparse": "^5.3.5",
     "@types/react": "18.0.1",
