--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@fortawesome/free-solid-svg-icons": "^6.2.0",
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@json-rpc-tools/utils": "^1.7.6",
+        "@types/marked": "^4.0.8",
         "@walletconnect/client": "^1.8.0",
         "@walletconnect/qrcode-modal": "^1.8.0",
         "@walletconnect/types": "^1.8.0",
@@ -35,6 +36,7 @@
         "file-saver": "^2.0.5",
         "ipfs-http-client": "^58.0.1",
         "isuri": "^2.0.3",
+        "marked": "^4.2.5",
         "next": "^12.2.5",
         "papaparse": "^5.3.2",
         "react": "18.0.0",
@@ -42,6 +44,7 @@
         "react-cookie": "^4.1.1",
         "react-dom": "18.0.0",
         "react-router-dom": "^6.3.0",
+        "sanitize-html": "^2.8.1",
         "tweetnacl": "^1.0.3",
         "web3modal": "^1.9.9"
     },
@@ -53,6 +56,7 @@
         "@types/react": "18.0.1",
         "@types/react-blockies": "^1.4.1",
         "@types/react-dom": "18.0.0",
+        "@types/sanitize-html": "^2.8.0",
         "eslint": "8.13.0",
         "eslint-config-next": "12.1.4",
         "typescript": "^4.8.2"
