--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "axios": "^0.27.2",
         "bitbadgesjs-address-converter": "^0.0.3",
         "bitbadgesjs-provider": "^0.0.3",
-        "bitbadgesjs-transactions": "^0.0.57",
+        "bitbadgesjs-transactions": "^0.0.59",
         "blockin": "^1.2.12",
         "blockin-algo-driver": "^1.0.2",
         "blockin-eth-driver-minified": "^1.0.0",
@@ -37,6 +37,7 @@
         "ipfs-http-client": "^58.0.1",
         "isuri": "^2.0.3",
         "marked": "^4.2.5",
+        "merkletreejs": "^0.3.9",
         "next": "^12.2.5",
         "papaparse": "^5.3.2",
         "react": "18.0.0",
@@ -49,6 +50,7 @@
         "web3modal": "^1.9.9"
     },
     "devDependencies": {
+        "@types/crypto-js": "^4.1.1",
         "@types/elliptic": "^6.4.14",
         "@types/file-saver": "^2.0.5",
         "@types/node": "17.0.23",
