--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "file-saver": "^2.0.5",
         "ipfs-http-client": "^58.0.1",
         "isuri": "^2.0.3",
+        "markdown-it": "^13.0.1",
         "marked": "^4.2.5",
         "merkletreejs": "^0.3.9",
         "next": "^12.2.5",
@@ -44,6 +45,7 @@
         "react-blockies": "^1.4.1",
         "react-cookie": "^4.1.1",
         "react-dom": "18.0.0",
+        "react-markdown-editor-lite": "^1.3.4",
         "react-router-dom": "^6.3.0",
         "sanitize-html": "^2.8.1",
         "tweetnacl": "^1.0.3",
@@ -53,6 +55,7 @@
         "@types/crypto-js": "^4.1.1",
         "@types/elliptic": "^6.4.14",
         "@types/file-saver": "^2.0.5",
+        "@types/markdown-it": "^12.2.3",
         "@types/node": "17.0.23",
         "@types/papaparse": "^5.3.5",
         "@types/react": "18.0.1",
