--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "file-saver": "^2.0.5",
         "ipfs-http-client": "^58.0.1",
         "isuri": "^2.0.3",
+        "joi": "^17.7.1",
         "markdown-it": "^13.0.1",
         "marked": "^4.2.5",
         "merkletreejs": "^0.3.9",
