--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@fortawesome/free-solid-svg-icons": "^6.2.0",
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@json-rpc-tools/utils": "^1.7.6",
+        "@types/lodash": "^4.14.191",
         "@types/marked": "^4.0.8",
         "@walletconnect/client": "^1.8.0",
         "@walletconnect/qrcode-modal": "^1.8.0",
@@ -37,6 +38,7 @@
         "ipfs-http-client": "^58.0.1",
         "isuri": "^2.0.3",
         "joi": "^17.7.1",
+        "lodash.debounce": "^4.0.8",
         "markdown-it": "^13.0.1",
         "marked": "^4.2.5",
         "merkletreejs": "^0.3.9",
