--- a/package.json
+++ b/package.json
@@ -44,11 +44,15 @@
         "merkletreejs": "^0.3.9",
         "next": "^12.2.5",
         "papaparse": "^5.3.2",
+        "qr.js": "^0.0.0",
+        "qrcode": "^1.5.1",
         "react": "18.0.0",
         "react-blockies": "^1.4.1",
         "react-cookie": "^4.1.1",
         "react-dom": "18.0.0",
+        "react-markdown": "^8.0.6",
         "react-markdown-editor-lite": "^1.3.4",
+        "react-qrcode-logo": "^2.9.0",
         "react-router-dom": "^6.3.0",
         "sanitize-html": "^2.8.1",
         "tweetnacl": "^1.0.3",
