--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@walletconnect/web3-provider": "^1.8.0",
         "antd": "^4.23.0",
         "axios": "^0.27.2",
+        "bitbadges-sdk": "^1.0.10",
         "bitbadgesjs-address-converter": "^0.0.3",
         "bitbadgesjs-provider": "^0.0.3",
         "bitbadgesjs-transactions": "^0.0.73",
