--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "@walletconnect/web3-provider": "^1.8.0",
         "antd": "^4.23.0",
         "axios": "^0.27.2",
-        "bitbadges-sdk": "^1.0.24",
+        "bitbadges-sdk": "^1.0.39",
         "bitbadgesjs-address-converter": "^0.0.3",
         "bitbadgesjs-provider": "^0.0.3",
         "bitbadgesjs-transactions": "^0.0.74",
@@ -51,6 +51,7 @@
         "react-blockies": "^1.4.1",
         "react-cookie": "^4.1.1",
         "react-dom": "18.0.0",
+        "react-infinite-scroll-component": "^6.1.0",
         "react-markdown": "^8.0.6",
         "react-markdown-editor-lite": "^1.3.4",
         "react-qrcode-logo": "^2.9.0",
