--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "dependencies": {
         "@ant-design/icons": "^4.7.0",
         "@cosmjs/crypto": "^0.28.13",
+        "@cosmjs/proto-signing": "^0.30.1",
+        "@cosmjs/stargate": "^0.30.1",
         "@fortawesome/fontawesome-svg-core": "^6.2.0",
         "@fortawesome/free-solid-svg-icons": "^6.2.0",
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@json-rpc-tools/utils": "^1.7.6",
+        "@keplr-wallet/cosmos": "^0.11.56",
         "@types/lodash": "^4.14.191",
         "@types/marked": "^4.0.8",
         "@walletconnect/client": "^1.8.0",
@@ -23,8 +26,9 @@
         "@walletconnect/web3-provider": "^1.8.0",
         "antd": "^4.23.0",
         "axios": "^0.27.2",
-        "bitbadges-sdk": "^1.0.42",
+        "bitbadges-sdk": "^1.0.46",
         "bitbadgesjs-address-converter": "^0.0.3",
+        "bitbadgesjs-proto": "^0.0.64",
         "bitbadgesjs-provider": "^0.0.3",
         "bitbadgesjs-transactions": "^0.0.77",
         "blockin": "^1.2.12",
@@ -35,6 +39,7 @@
         "elliptic": "^6.5.4",
         "eth-sig-util": "^3.0.1",
         "ethers": "^5.7.0",
+        "evmosjs": "^0.3.3",
         "file-saver": "^2.0.5",
         "ipfs-http-client": "^58.0.1",
         "isuri": "^2.0.3",
@@ -61,6 +66,7 @@
         "web3modal": "^1.9.9"
     },
     "devDependencies": {
+        "@keplr-wallet/types": "^0.11.56",
         "@types/crypto-js": "^4.1.1",
         "@types/elliptic": "^6.4.14",
         "@types/file-saver": "^2.0.5",
