--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
         "@walletconnect/web3-provider": "^1.8.0",
         "antd": "^4.23.0",
         "axios": "^0.27.2",
-        "bitbadges-sdk": "^1.0.46",
+        "bitbadges-sdk": "^1.0.47",
         "bitbadgesjs-address-converter": "^0.0.3",
         "bitbadgesjs-proto": "^0.0.64",
         "bitbadgesjs-provider": "^0.0.3",
         "bitbadgesjs-transactions": "^0.0.77",
-        "blockin": "^1.2.12",
+        "blockin": "^1.2.15",
         "blockin-algo-driver": "^1.0.2",
         "blockin-eth-driver-minified": "^1.0.0",
         "crypto-browserify": "^3.12.0",
@@ -57,6 +57,8 @@
         "react-cookie": "^4.1.1",
         "react-dom": "18.0.0",
         "react-infinite-scroll-component": "^6.1.0",
+        "react-intl": "^6.3.2",
+        "react-lite-youtube-embed": "^2.3.52",
         "react-markdown": "^8.0.6",
         "react-markdown-editor-lite": "^1.3.4",
         "react-qrcode-logo": "^2.9.0",
