--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
         "@walletconnect/web3-provider": "^1.8.0",
         "antd": "^4.23.0",
         "axios": "^0.27.2",
-        "bitbadges-sdk": "^1.0.48",
         "bitbadgesjs-address-converter": "^0.0.3",
         "bitbadgesjs-proto": "^0.0.64",
         "bitbadgesjs-provider": "^0.0.3",
         "bitbadgesjs-transactions": "^0.0.77",
+        "bitbadgesjs-utils": "^1.0.0",
         "blockin": "^1.2.15",
         "blockin-algo-driver": "^1.0.2",
         "blockin-eth-driver-minified": "^1.0.0",
