added helpful env variables; cosmWASM and MsgSend compat

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
 BITBADGES_IO=true
+BACKEND_PORT=":3001" 
+# MAINNET=true
+# BACKEND_PORT="" or undefined if using nginx and no port is needed to be specified
