--- a/package.json
+++ b/package.json
@@ -18,12 +18,18 @@
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@json-rpc-tools/utils": "^1.7.6",
         "@keplr-wallet/cosmos": "^0.11.56",
+        "@tanstack/react-query": "^4.29.5",
         "@types/lodash": "^4.14.191",
         "@types/marked": "^4.0.8",
+        "@wagmi/core": "^0.10.10",
         "@walletconnect/client": "^1.8.0",
         "@walletconnect/qrcode-modal": "^1.8.0",
+        "@walletconnect/sign-client": "^2.7.0",
         "@walletconnect/types": "^1.8.0",
         "@walletconnect/web3-provider": "^1.8.0",
+        "@web3modal/ethereum": "^2.3.6",
+        "@web3modal/react": "^2.3.6",
+        "@web3modal/standalone": "^2.3.6",
         "antd": "^4.23.0",
         "axios": "^0.27.2",
         "bitbadgesjs-address-converter": "^0.0.3",
@@ -38,7 +44,7 @@
         "dotenv": "^16.0.2",
         "elliptic": "^6.5.4",
         "eth-sig-util": "^3.0.1",
-        "ethers": "^5.7.0",
+        "ethers": "^5.7.2",
         "evmosjs": "^0.3.3",
         "file-saver": "^2.0.5",
         "ipfs-http-client": "^58.0.1",
@@ -62,9 +68,11 @@
         "react-markdown": "^8.0.6",
         "react-markdown-editor-lite": "^1.3.4",
         "react-qrcode-logo": "^2.9.0",
+        "react-query": "^3.39.3",
         "react-router-dom": "^6.3.0",
         "sanitize-html": "^2.8.1",
         "tweetnacl": "^1.0.3",
+        "wagmi": "^0.12.12",
         "web3modal": "^1.9.9"
     },
     "devDependencies": {
