--- a/package.json
+++ b/package.json
@@ -1,94 +1,97 @@
 {
-    "name": "bitbadges-frontend",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint"
-    },
-    "dependencies": {
-        "@ant-design/icons": "^4.7.0",
-        "@cosmjs/crypto": "^0.28.13",
-        "@cosmjs/proto-signing": "^0.30.1",
-        "@cosmjs/stargate": "^0.30.1",
-        "@fortawesome/fontawesome-svg-core": "^6.2.0",
-        "@fortawesome/free-solid-svg-icons": "^6.2.0",
-        "@fortawesome/react-fontawesome": "^0.2.0",
-        "@json-rpc-tools/utils": "^1.7.6",
-        "@keplr-wallet/cosmos": "^0.11.56",
-        "@tanstack/react-query": "^4.29.5",
-        "@types/lodash": "^4.14.191",
-        "@types/marked": "^4.0.8",
-        "@wagmi/core": "^0.10.10",
-        "@walletconnect/client": "^1.8.0",
-        "@walletconnect/qrcode-modal": "^1.8.0",
-        "@walletconnect/sign-client": "^2.7.0",
-        "@walletconnect/types": "^1.8.0",
-        "@walletconnect/web3-provider": "^1.8.0",
-        "@web3modal/ethereum": "^2.3.6",
-        "@web3modal/react": "^2.3.6",
-        "@web3modal/standalone": "^2.3.6",
-        "antd": "^4.23.0",
-        "axios": "^0.27.2",
-        "bitbadgesjs-address-converter": "^0.0.3",
-        "bitbadgesjs-proto": "^0.0.68",
-        "bitbadgesjs-provider": "^0.0.3",
-        "bitbadgesjs-transactions": "^0.0.91",
-        "bitbadgesjs-utils": "^1.0.5",
-        "blockin": "^1.2.15",
-        "blockin-algo-driver": "^1.0.2",
-        "blockin-eth-driver-minified": "^1.0.0",
-        "crypto-browserify": "^3.12.0",
-        "dotenv": "^16.0.2",
-        "elliptic": "^6.5.4",
-        "eth-sig-util": "^3.0.1",
-        "ethers": "^5.7.2",
-        "evmosjs": "^0.3.3",
-        "file-saver": "^2.0.5",
-        "ipfs-http-client": "^58.0.1",
-        "isuri": "^2.0.3",
-        "joi": "^17.7.1",
-        "lodash.debounce": "^4.0.8",
-        "markdown-it": "^13.0.1",
-        "marked": "^4.2.5",
-        "merkletreejs": "^0.3.9",
-        "next": "^12.2.5",
-        "papaparse": "^5.3.2",
-        "qr.js": "^0.0.0",
-        "qrcode": "^1.5.1",
-        "react": "18.0.0",
-        "react-blockies": "^1.4.1",
-        "react-cookie": "^4.1.1",
-        "react-dom": "18.0.0",
-        "react-infinite-scroll-component": "^6.1.0",
-        "react-intl": "^6.3.2",
-        "react-lite-youtube-embed": "^2.3.52",
-        "react-markdown": "^8.0.6",
-        "react-markdown-editor-lite": "^1.3.4",
-        "react-qrcode-logo": "^2.9.0",
-        "react-query": "^3.39.3",
-        "react-router-dom": "^6.3.0",
-        "sanitize-html": "^2.8.1",
-        "tweetnacl": "^1.0.3",
-        "wagmi": "^0.12.12",
-        "web3modal": "^1.9.9"
-    },
-    "devDependencies": {
-        "@keplr-wallet/types": "^0.11.56",
-        "@types/crypto-js": "^4.1.1",
-        "@types/elliptic": "^6.4.14",
-        "@types/file-saver": "^2.0.5",
-        "@types/markdown-it": "^12.2.3",
-        "@types/node": "17.0.23",
-        "@types/papaparse": "^5.3.5",
-        "@types/react": "18.0.1",
-        "@types/react-blockies": "^1.4.1",
-        "@types/react-dom": "18.0.0",
-        "@types/sanitize-html": "^2.8.0",
-        "eslint": "8.13.0",
-        "eslint-config-next": "12.1.4",
-        "typescript": "^4.8.2"
-    }
+  "name": "bitbadges-frontend",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "@cosmjs/crypto": "^0.28.13",
+    "@cosmjs/proto-signing": "^0.30.1",
+    "@cosmjs/stargate": "^0.30.1",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@json-rpc-tools/utils": "^1.7.6",
+    "@keplr-wallet/cosmos": "^0.11.56",
+    "@tanstack/react-query": "^4.29.5",
+    "@types/lodash": "^4.14.191",
+    "@types/marked": "^4.0.8",
+    "@types/react-stars": "^2.2.1",
+    "@wagmi/core": "^0.10.10",
+    "@walletconnect/client": "^1.8.0",
+    "@walletconnect/qrcode-modal": "^1.8.0",
+    "@walletconnect/sign-client": "^2.7.0",
+    "@walletconnect/types": "^1.8.0",
+    "@walletconnect/web3-provider": "^1.8.0",
+    "@web3modal/ethereum": "^2.3.6",
+    "@web3modal/react": "^2.3.6",
+    "@web3modal/standalone": "^2.3.6",
+    "antd": "^4.23.0",
+    "axios": "^0.27.2",
+    "bitbadgesjs-address-converter": "^0.0.3",
+    "bitbadgesjs-proto": "^0.0.68",
+    "bitbadgesjs-provider": "^0.0.3",
+    "bitbadgesjs-transactions": "^0.0.91",
+    "bitbadgesjs-utils": "^1.0.13",
+    "blockin": "^1.2.15",
+    "blockin-algo-driver": "^1.0.2",
+    "blockin-eth-driver-minified": "^1.0.0",
+    "crypto-browserify": "^3.12.0",
+    "dotenv": "^16.0.2",
+    "elliptic": "^6.5.4",
+    "eth-sig-util": "^3.0.1",
+    "ethers": "^5.7.2",
+    "evmosjs": "^0.3.3",
+    "file-saver": "^2.0.5",
+    "ipfs-http-client": "^58.0.1",
+    "isuri": "^2.0.3",
+    "joi": "^17.7.1",
+    "lodash.debounce": "^4.0.8",
+    "markdown-it": "^13.0.1",
+    "marked": "^4.2.5",
+    "merkletreejs": "^0.3.9",
+    "next": "^12.2.5",
+    "papaparse": "^5.3.2",
+    "qr.js": "^0.0.0",
+    "qrcode": "^1.5.1",
+    "react": "18.0.0",
+    "react-blockies": "^1.4.1",
+    "react-cookie": "^4.1.1",
+    "react-dom": "18.0.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-intl": "^6.3.2",
+    "react-lite-youtube-embed": "^2.3.52",
+    "react-markdown": "^8.0.6",
+    "react-markdown-editor-lite": "^1.3.4",
+    "react-qrcode-logo": "^2.9.0",
+    "react-query": "^3.39.3",
+    "react-rating-stars-component": "^2.2.0",
+    "react-router-dom": "^6.3.0",
+    "react-stars": "^2.2.5",
+    "sanitize-html": "^2.8.1",
+    "tweetnacl": "^1.0.3",
+    "wagmi": "^0.12.12",
+    "web3modal": "^1.9.9"
+  },
+  "devDependencies": {
+    "@keplr-wallet/types": "^0.11.56",
+    "@types/crypto-js": "^4.1.1",
+    "@types/elliptic": "^6.4.14",
+    "@types/file-saver": "^2.0.5",
+    "@types/markdown-it": "^12.2.3",
+    "@types/node": "17.0.23",
+    "@types/papaparse": "^5.3.5",
+    "@types/react": "18.0.1",
+    "@types/react-blockies": "^1.4.1",
+    "@types/react-dom": "18.0.0",
+    "@types/sanitize-html": "^2.8.0",
+    "eslint": "8.13.0",
+    "eslint-config-next": "12.1.4",
+    "typescript": "^4.8.2"
+  }
 }
