--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@json-rpc-tools/utils": "^1.7.6",
     "@keplr-wallet/cosmos": "^0.11.56",
+    "@sendgrid/mail": "^7.7.0",
     "@tanstack/react-query": "^4.29.5",
     "@types/lodash": "^4.14.191",
     "@types/marked": "^4.0.8",
@@ -37,7 +38,7 @@
     "bitbadgesjs-proto": "^0.0.68",
     "bitbadgesjs-provider": "^0.0.3",
     "bitbadgesjs-transactions": "^0.0.91",
-    "bitbadgesjs-utils": "^1.0.16",
+    "bitbadgesjs-utils": "^1.0.19",
     "blockin": "^1.2.15",
     "blockin-algo-driver": "^1.0.2",
     "blockin-eth-driver-minified": "^1.0.0",
