--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "bitbadgesjs-proto": "^0.0.68",
     "bitbadgesjs-provider": "^0.0.3",
     "bitbadgesjs-transactions": "^0.0.91",
-    "bitbadgesjs-utils": "^1.0.19",
+    "bitbadgesjs-utils": "^1.0.20",
     "blockin": "^1.2.15",
     "blockin-algo-driver": "^1.0.2",
     "blockin-eth-driver-minified": "^1.0.0",
@@ -49,6 +49,7 @@
     "ethers": "^5.7.2",
     "evmosjs": "^0.3.3",
     "file-saver": "^2.0.5",
+    "html-to-react": "^1.5.1",
     "ipfs-http-client": "^58.0.1",
     "isuri": "^2.0.3",
     "joi": "^17.7.1",
