--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "blockin-algo-driver": "^1.0.2",
     "blockin-eth-driver-minified": "^1.0.0",
     "crypto-browserify": "^3.12.0",
+    "deep-equal": "^2.2.2",
     "dotenv": "^16.0.2",
     "elliptic": "^6.5.4",
     "eth-sig-util": "^3.0.1",
