--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@cosmjs/proto-signing": "^0.30.1",
     "@cosmjs/stargate": "^0.30.1",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@json-rpc-tools/utils": "^1.7.6",
@@ -37,7 +38,7 @@
     "bitbadgesjs-address-converter": "^0.0.3",
     "bitbadgesjs-proto": "^0.1.76",
     "bitbadgesjs-provider": "^0.0.3",
-    "bitbadgesjs-utils": "^1.1.129",
+    "bitbadgesjs-utils": "^1.1.142",
     "blockin": "^1.2.15",
     "blockin-algo-driver": "^1.0.2",
     "blockin-eth-driver-minified": "^1.0.0",
