--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@json-rpc-tools/utils": "^1.7.6",
     "@keplr-wallet/cosmos": "^0.11.56",
+    "@reduxjs/toolkit": "^1.9.6",
     "@sendgrid/mail": "^7.7.0",
     "@types/lodash": "^4.14.191",
     "@types/marked": "^4.0.8",
@@ -32,7 +33,7 @@
     "@web3modal/react": "^2.7.1",
     "@web3modal/standalone": "^2.3.6",
     "@web3modal/wagmi": "^3.0.2",
-    "antd": "^4.23.0",
+    "antd": "^4.24.14",
     "axios": "^0.27.2",
     "bitbadgesjs-address-converter": "^0.0.3",
     "bitbadgesjs-proto": "^0.1.105",
@@ -72,8 +73,10 @@
     "react-qrcode-logo": "^2.9.0",
     "react-query": "^3.39.3",
     "react-rating-stars-component": "^2.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.3.0",
     "react-stars": "^2.2.5",
+    "redux": "^4.2.1",
     "sanitize-html": "^2.8.1",
     "tweetnacl": "^1.0.3",
     "viem": "^1.14.0",
