--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@json-rpc-tools/utils": "^1.7.6",
+    "@karmaniverous/serify-deserify": "^1.3.9",
     "@keplr-wallet/cosmos": "^0.11.56",
     "@reduxjs/toolkit": "^1.9.6",
     "@sendgrid/mail": "^7.7.0",
@@ -38,7 +39,7 @@
     "bitbadgesjs-address-converter": "^0.0.3",
     "bitbadgesjs-proto": "^0.1.122",
     "bitbadgesjs-provider": "^0.0.3",
-    "bitbadgesjs-utils": "^1.1.252",
+    "bitbadgesjs-utils": "^1.1.264",
     "blockin": "^1.2.55",
     "blockin-algo-driver": "^1.0.2",
     "blockin-eth-driver-minified": "^1.0.0",
@@ -51,6 +52,7 @@
     "evmosjs": "^0.3.3",
     "file-saver": "^2.0.5",
     "html-to-react": "^1.5.1",
+    "immutable": "^5.0.0-beta.4",
     "ipfs-http-client": "^58.0.1",
     "isuri": "^2.0.3",
     "joi": "^17.7.1",
