--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "bitbadgesjs-address-converter": "^0.0.3",
     "bitbadgesjs-proto": "^0.1.124",
     "bitbadgesjs-provider": "^0.0.3",
+    "bitbadgesjs-utils": "^1.1.267",
     "blockin": "^1.2.56",
     "blockin-algo-driver": "^1.0.2",
     "blockin-eth-driver-minified": "^1.0.0",
