--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "react-router-dom": "^6.3.0",
     "react-stars": "^2.2.5",
     "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "sanitize-html": "^2.8.1",
     "tweetnacl": "^1.0.3",
     "viem": "^1.14.0",
