--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.3.0",
     "react-stars": "^2.2.5",
+    "react-syntax-highlighter": "^15.5.0",
     "redux": "^4.2.1",
     "sanitize-html": "^2.8.1",
     "tweetnacl": "^1.0.3",
@@ -94,6 +95,7 @@
     "@types/react": "18.0.1",
     "@types/react-blockies": "^1.4.1",
     "@types/react-dom": "18.0.0",
+    "@types/react-syntax-highlighter": "^15.5.9",
     "@types/sanitize-html": "^2.8.0",
     "@typescript-eslint/parser": "^6.7.4",
     "autoprefixer": "^10.4.16",
