--- a/package.json
+++ b/package.json
@@ -58,15 +58,16 @@
   },
   "devDependencies": {
     "@keplr-wallet/types": "^0.11.56",
+    "@types/crypto-js": "^4.1.3",
     "@types/file-saver": "^2.0.5",
+    "@types/lodash": "^4.14.191",
     "@types/markdown-it": "^12.2.3",
     "@types/node": "17.0.23",
     "@types/react": "18.0.1",
-    "@types/lodash": "^4.14.191",
     "@types/react-blockies": "^1.4.1",
     "@types/react-dom": "18.0.0",
-    "@types/react-syntax-highlighter": "^15.5.9",
     "@types/react-stars": "^2.2.1",
+    "@types/react-syntax-highlighter": "^15.5.9",
     "@typescript-eslint/parser": "^6.7.4",
     "autoprefixer": "^10.4.16",
     "eslint": "8.50.0",
