--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@cosmjs/crypto": "^0.28.13",
-    "@cosmjs/stargate": "^0.30.1",
+    "@cosmjs/encoding": "^0.31.3",
+    "@cosmjs/proto-signing": "^0.31.3",
+    "@cosmjs/stargate": "0.31.3",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
@@ -32,8 +34,8 @@
     "antd": "^4.24.14",
     "axios": "^0.27.2",
     "bitbadgesjs-address-converter": "^0.0.3",
-    "bitbadgesjs-proto": "^0.1.132",
-    "bitbadgesjs-provider": "^0.0.4",
+    "bitbadgesjs-proto": "^0.1.155",
+    "bitbadgesjs-provider": "^0.0.5",
     "bitbadgesjs-utils": "^1.1.274",
     "blockin": "^1.2.58",
     "blockin-eth-driver-minified": "^1.0.0",
