solana + cleanup + merged bitbadgesjs-utils

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@keplr-wallet/cosmos": "^0.11.56",
     "@reduxjs/toolkit": "^1.9.6",
+    "@solana/web3.js": "^1.87.6",
     "@walletconnect/client": "^1.8.0",
     "@walletconnect/qrcode-modal": "^1.8.0",
     "@walletconnect/sign-client": "^2.7.0",
@@ -33,12 +34,12 @@
     "@web3modal/wagmi": "^3.0.2",
     "antd": "^4.24.14",
     "axios": "^0.27.2",
-    "bitbadgesjs-address-converter": "^0.0.3",
-    "bitbadgesjs-proto": "^0.1.167",
-    "bitbadgesjs-provider": "^0.0.5",
-    "bitbadgesjs-utils": "^1.1.282",
+    "bech32": "^2.0.0",
+    "bitbadgesjs-proto": "^0.1.180",
+    "bitbadgesjs-utils": "^1.1.294",
     "blockin": "^1.2.58",
     "blockin-eth-driver-minified": "^1.0.0",
+    "bs58": "^5.0.0",
     "dotenv": "^16.0.2",
     "ethers": "^5.7.2",
     "file-saver": "^2.0.5",
@@ -58,6 +59,7 @@
     "react-stars": "^2.2.5",
     "react-syntax-highlighter": "^15.5.0",
     "redux": "^4.2.1",
+    "tweetnacl": "^1.0.3",
     "viem": "^1.14.0",
     "wagmi": "^1.4.2"
   },
