ui; qr codes  / blockin cleanup

--- a/package.json
+++ b/package.json
@@ -35,9 +35,8 @@
     "antd": "^4.24.14",
     "axios": "^1.6.2",
     "bech32": "^2.0.0",
-    "bitbadgesjs-utils": "^1.1.306",
-    "blockin": "^1.2.60",
-    "blockin-eth-driver-minified": "^1.0.0",
+    "bitbadgesjs-utils": "^1.1.316",
+    "blockin": "^1.2.62",
     "bs58": "^5.0.0",
     "dotenv": "^16.0.2",
     "ethers": "^5.7.2",
@@ -47,6 +46,7 @@
     "markdown-it": "^13.0.1",
     "merkletreejs": "^0.3.11",
     "next": "^14.0.1",
+    "passkit-generator": "^3.1.11",
     "react": "18.2.0",
     "react-blockies": "^1.4.1",
     "react-cookie": "^4.1.1",
