--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "merkletreejs": "^0.3.11",
     "next": "^14.0.1",
     "passkit-generator": "^3.1.11",
+    "qrcode": "^1.5.3",
     "react": "18.2.0",
     "react-blockies": "^1.4.1",
     "react-cookie": "^4.1.1",
@@ -69,6 +70,7 @@
     "@types/lodash": "^4.14.191",
     "@types/markdown-it": "^12.2.3",
     "@types/node": "17.0.23",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "18.0.1",
     "@types/react-blockies": "^1.4.1",
     "@types/react-dom": "18.0.0",
