--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
     "next": "^14.0.1",
     "passkit-generator": "^3.1.11",
     "qrcode": "^1.5.3",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-blockies": "^1.4.1",
     "react-cookie": "^4.1.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-markdown-editor-lite": "^1.3.4",
     "react-qrcode-logo": "^2.9.0",
