mongoDB migrations + UI fixes

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "antd": "^4.24.14",
     "axios": "^1.6.2",
     "bech32": "^2.0.0",
-    "bitbadgesjs-utils": "^1.1.339",
+    "bitbadgesjs-utils": "^1.1.351",
     "blockin": "^1.2.69",
     "bs58": "^5.0.0",
     "dotenv": "^16.0.2",
@@ -45,6 +45,7 @@
     "joi": "^17.7.1",
     "markdown-it": "^13.0.1",
     "merkletreejs": "^0.3.11",
+    "mongoose": "^8.0.3",
     "next": "^14.0.1",
     "passkit-generator": "^3.1.11",
     "qrcode": "^1.5.3",
