--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@keplr-wallet/cosmos": "^0.11.56",
     "@reduxjs/toolkit": "^1.9.6",
     "@solana/web3.js": "^1.87.6",
+    "@uiw/react-md-editor": "^4.0.2",
     "@walletconnect/client": "^1.8.0",
     "@walletconnect/qrcode-modal": "^1.8.0",
     "@walletconnect/sign-client": "^2.7.0",
@@ -36,31 +37,29 @@
     "axios": "^1.6.2",
     "bech32": "^2.0.0",
     "bitbadgesjs-proto": "^0.1.207",
-    "bitbadgesjs-utils": "^1.1.423",
+    "bitbadgesjs-utils": "^1.1.424",
     "blockin": "^1.2.74",
     "bs58": "^5.0.0",
     "dotenv": "^16.0.2",
     "ethers": "^5.7.2",
     "file-saver": "^2.0.5",
-    "html-to-react": "^1.5.1",
     "joi": "^17.7.1",
-    "markdown-it": "^13.0.1",
     "merkletreejs": "^0.3.11",
     "mongoose": "^8.0.3",
     "next": "^14.0.1",
-    "passkit-generator": "^3.1.11",
+    "next-remove-imports": "^1.0.12",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-blockies": "^1.4.1",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
-    "react-markdown-editor-lite": "^1.3.4",
     "react-qrcode-logo": "^2.9.0",
     "react-redux": "^8.1.3",
     "react-stars": "^2.2.5",
     "react-syntax-highlighter": "^15.5.0",
     "redux": "^4.2.1",
+    "rehype-sanitize": "^6.0.0",
     "tweetnacl": "^1.0.3",
     "viem": "^1.14.0",
     "wagmi": "^1.4.2"
