--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "axios": "^1.6.2",
     "bech32": "^2.0.0",
     "bitbadgesjs-proto": "^0.1.207",
-    "bitbadgesjs-utils": "^1.1.431",
+    "bitbadgesjs-utils": "^1.1.432",
+    "blockin": "^1.2.78",
     "bs58": "^5.0.0",
     "dotenv": "^16.0.2",
     "ethers": "^5.7.2",
@@ -57,6 +58,7 @@
     "react-redux": "^8.1.3",
     "react-stars": "^2.2.5",
     "react-syntax-highlighter": "^15.5.0",
+    "react-tailwindcss-select": "^1.8.5",
     "redux": "^4.2.1",
     "rehype-sanitize": "^6.0.0",
     "tweetnacl": "^1.0.3",
