--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-redux": "^8.1.3",
     "react-simple-code-editor": "^0.13.1",
     "react-stars": "^2.2.5",
+    "react-syntax-highlighter": "^15.5.0",
     "react-tailwindcss-select": "^1.8.5",
     "redux": "^4.2.1",
     "rehype-sanitize": "^6.0.0",
