--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@cosmjs/crypto": "^0.28.13",
     "@cosmjs/encoding": "^0.31.3",
     "@cosmjs/proto-signing": "^0.31.3",
-    "@cosmjs/stargate": "0.31.3",
+    "@cosmjs/stargate": "^0.32.2",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
@@ -38,7 +38,7 @@
     "antd": "^4.24.14",
     "axios": "^1.6.2",
     "bech32": "^2.0.0",
-    "bitbadgesjs-sdk": "^0.1.70",
+    "bitbadgesjs-sdk": "^0.1.71",
     "blockin": "^1.2.112",
     "bs58": "^5.0.0",
     "dotenv": "^16.0.2",
