--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "antd": "^4.24.14",
     "axios": "^1.6.8",
     "bech32": "^2.0.0",
+    "bitbadgesjs-sdk": "^0.2.1",
     "blockin": "^1.2.114",
     "bs58": "^5.0.0",
     "dotenv": "^16.0.2",
